--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a  href="index_v.html" target="_blank"><span>Виноград , орехи ...</span></a></li>
                 <li><a  href="o_raznom6.html" target="_blank"  ><span>Семейный сайт</span></a></li>
 				<li><a  href="coderec.html" target="_blank"><span>Немного о Форекс</span></a></li>
-                <li><a  href="o_razn.html" target="_blank"><span>Поездки и экскурсии</span></a></li>
+                <li><a  href="o_razn.html" target="_blank"><span>Жизнь в фотографиях</span></a></li>
 				<li><a  href="o_raznom4.html" target="_blank"><span>О разном...</span></a></li>
      		  </ul>
 			</div>
@@ -81,10 +81,7 @@
               				
               </table>
 
-              <!-- <div align="center">Хостинг от <a href="http://www.ucoz.ru/" title="Создать сайт бесплатно">uCoz</a>
-			  <br>
-			  </div> -->
-			</section>
+             </section>
           </div>        
         
 		  <aside>
@@ -130,14 +127,6 @@
 			    <div class="sidetitle"><span>Друзья сайта</span>
 			    </div>
 
-                <!-- <div class="inner">
-			      <ul>
-                    <li><a href="https://blog.ucoz.ru/" target="_blank" rel="noopener nofollow">Официальный блог</a></li>
-                    <li><a href="https://forum.ucoz.ru/" target="_blank" rel="noopener nofollow">Сообщество uCoz</a></li>
-                    <li><a href="https://www.ucoz.ru/help/" target="_blank" rel="noopener nofollow">База знаний uCoz</a></li>
-                  </ul>
-                </div> -->
-
                 <div class="clr">
 			    </div>
 
@@ -166,9 +155,7 @@
           <div class="copy">
             Copyright Персональный сайт © 2019
           </div>
-          <!-- <div class="ucoz-copy"><span class="pbs1Gp05"><a href="https://www.ucoz.ru/" target="_blank" rel="nofollow">uCoz</a></span>
-    	  </div> -->
-        </div>
+         </div>
       </footer>
 
     </div>
