--- a/o_razn5.html
+++ b/o_razn5.html
@@ -48,7 +48,7 @@
 							 </tr>
 						   </tbody>
 						 </table>
-						 <br><br>&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<a style="color: rgb(35, 35, 119); font-size: 20px; font-weight: bold;" href="#">О разном...  ( Статьи на разные темы )</a><br><br><br>
+						 <br><br>&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<a style="color: rgb(35, 35, 119); font-size: 20px; font-weight: bold;" href="#">Жизнь в фотографиях</a><br><br><br>
 					   </td>
 					 </tr>
                      <tr bgcolor="#dbdbdf">
@@ -79,6 +79,14 @@
                     <td>
 					  <table width="100%" cellspacing=2 cellpadding=4 border=0 class="main_menu">
 					    <tbody>
+						
+						<tr valign=top>
+						    <td>
+       			              <IMG SRC="img1/dot.gif" WIDTH="3" HEIGHT="3" vspace=4>
+							</td>
+							<td width="100%"><p><a href="o_razn7.html">ССО МИИТ<br>(1968-1971)</a></p>
+                            </td>
+                          </tr>
 						
                           <tr valign=top>
 						    <td>
