--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a  href="index_v.html" target="_blank"><span>Виноград , орехи ...</span></a></li>
                 <li><a  href="o_raznom6.html" target="_blank"  ><span>Семейный сайт</span></a></li>
 				<li><a  href="coderec.html" target="_blank"><span>Немного о Форекс</span></a></li>
-                <li><a  href="o_razn.html" target="_blank"><span>Жизнь в фотографиях</span></a></li>
+                <li><a  href="o_razn7.html" target="_blank"><span>Жизнь в фотографиях</span></a></li>
 				<li><a  href="o_raznom4.html" target="_blank"><span>О разном...</span></a></li>
      		  </ul>
 			</div>
