--- a/o_razn1.html
+++ b/o_razn1.html
@@ -92,7 +92,7 @@
 						    <td>
        			              <IMG SRC="img1/dot.gif" WIDTH="3" HEIGHT="3" vspace=4>
 							</td>
-							<td width="100%"><p><a href="o_razn.html">Первый раз<br> в Англии </a></p>
+							<td width="100%"><p><a href="o_razn.html">Первый раз<br> в Англии (2011)</a></p>
                             </td>
                           </tr>
 
@@ -100,7 +100,7 @@
 						    <td>
        			              <IMG SRC="img1/dot.gif" WIDTH="3" HEIGHT="3" vspace=4>
 							</td>
-							<td width="100%"><p><a class=item_active href="o_razn1.html">Первый раз<br> в США </a></p>
+							<td width="100%"><p><a class=item_active href="o_razn1.html">Первый раз<br> в США (2016)</a></p>
                             </td>
                           </tr>
 						  
