--- a/o_razn.html
+++ b/o_razn.html
@@ -106,6 +106,14 @@
 						  
 						  <tr valign=top>
 						    <td>
+       			              <IMG SRC="_img/dot.gif" WIDTH="3" HEIGHT="3" vspace=4>
+							</td>
+							<td width="100%"><p><a href="o_razn8.html">Отдых в Карасане (2011,август)</a></p>
+                            </td>
+                          </tr>
+						  
+						  <tr valign=top>
+						    <td>
        			              <IMG SRC="img1/dot.gif" WIDTH="3" HEIGHT="3" vspace=4>
 							</td>
 							<td width="100%"><p><a href="o_razn2.html">В США ( 2017, август-сентябрь) </a></p>
