--- a/o_razn3.html
+++ b/o_razn3.html
@@ -95,6 +95,14 @@
 							<td width="100%"><p><a href="o_razn.html">Первый раз<br> в Англии (2011)</a></p>
                             </td>
                           </tr>
+						  
+						  <tr valign=top>
+						    <td>
+       			              <IMG SRC="_img/dot.gif" WIDTH="3" HEIGHT="3" vspace=4>
+							</td>
+							<td width="100%"><p><a href="o_razn8.html">Отдых в Карасане (2011,август)</a></p>
+                            </td>
+                          </tr>
 
                           <tr valign=top>
 						    <td>
