--- a/o_razn7.html
+++ b/o_razn7.html
@@ -172,7 +172,7 @@
               <TBODY>
 
                 <TR>
-                  <TD width=15><IMG src="img1/top_image2.gif/blanker.gif" width=15>
+                  <TD width=15><IMG src="img1/blanker.gif" width=15>
 				  </TD>
                   <TD width="100%"><IMG height=10 src="img1/blanker.gif" width=184> 
                     <div class="sidetitle"><span>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Календарь</span>
