--- a/img_html/foto_report7.html
+++ b/img_html/foto_report7.html
@@ -17,64 +17,64 @@
 Футуристическое сооружение модного архитектора Сантьяго Калатравы возвышается на берегу Эрессунского пролива, в Западной гавани.<br> 54-этажный белокаменный небоскреб с закрученным по спирали фасадом – самое высокое здание в Скандинавии.<br> Его высота – 190 метров. Внутри располагаются офисы, конференц-залы и апартаменты класса «люкс».<br><br>
    <p><center><img src="img_html/img/img7/5.jpg" alt='Мальме'><br>
    Праздничный Мальме.<br><br>
-   <p><center><img src="img_html/img/img7/6.png" alt='Мальме'>
-   <p><center><img src="img_html/img/img7/7.png" alt='Мальме'>
-   <p><center><img src="img_html/img/img7/8.png" alt='Мальме'>
-   <p><center><img src="img_html/img/img7/9.png" alt='Мальме'>
-   <p><center><img src="img_html/img/img7/10.png" alt='Мальме'>
-   <p><center><img src="img_html/img/img7/11.png" alt='Копенгаген'><br>
+   <p><center><img src="img_html/img/img7/6.jpg" alt='Мальме'>
+   <p><center><img src="img_html/img/img7/7.jpg" alt='Мальме'>
+   <p><center><img src="img_html/img/img7/8.jpg" alt='Мальме'>
+   <p><center><img src="img_html/img/img7/9.jpg" alt='Мальме'>
+   <p><center><img src="img_html/img/img7/10.jpg" alt='Мальме'>
+   <p><center><img src="img_html/img/img7/11.jpg" alt='Копенгаген'><br>
       Копенгаген.<br><br>
-   <p><center><img src="img_html/img/img7/12.png" alt='Копенгаген'>
-   <p><center><img src="img_html/img/img7/13.png" alt='Копенгаген'>
-   <p><center><img src="img_html/img/img7/14.png" alt='Копенгаген'><br>
+   <p><center><img src="img_html/img/img7/12.jpg" alt='Копенгаген'>
+   <p><center><img src="img_html/img/img7/13.jpg" alt='Копенгаген'>
+   <p><center><img src="img_html/img/img7/14.jpg" alt='Копенгаген'><br>
        У статуи Русалочки — изображающей персонаж из сказки «Русалочка» Ханса Кристиана Андерсена.<br><br>
    <p><center><img src="img_html/img/img7/15.jpg" alt='Копенгаген'><br>
       Копенгаген.Королевский дворец Амалиенборг.<br><br>
-   <p><center><img src="img_html/img/img7/16.png" alt='Копенгаген'><br>
+   <p><center><img src="img_html/img/img7/16.jpg" alt='Копенгаген'><br>
       На площади перед дворцом. <br><br>
-   <p><center><img src="img_html/img/img7/17.png" alt='Копенгаген'><br>
+   <p><center><img src="img_html/img/img7/17.jpg" alt='Копенгаген'><br>
       Дворец Амалиенборг; караул Её Величества Королевы Дании Маргреты II. <br><br>
-   <p><center><img src="img_html/img/img7/18.png" alt='Копенгаген'><br>
+   <p><center><img src="img_html/img/img7/18.jpg" alt='Копенгаген'><br>
       У одного из замков недалеко от Копенгагена.<br><br>
-   <p><center><img src="img_html/img/img7/19.png" alt='Копенгаген'>
+   <p><center><img src="img_html/img/img7/19.jpg" alt='Копенгаген'>
    <p><center><img src="img_html/img/img7/20.jpg" alt='Вена'><br>
       Вена.<br><br>
-   <p><center><img src="img_html/img/img7/21.png" alt='Вена'><br>
+   <p><center><img src="img_html/img/img7/21.jpg" alt='Вена'><br>
       Встреча с друзьями из Северной Македонии.<br>Фото на фоне собора Святого Стефана.<br><br>
-   <p><center><img src="img_html/img/img7/22.png" alt='Вена'><br>
+   <p><center><img src="img_html/img/img7/22.jpg" alt='Вена'><br>
       На старинных улочках вечерней Вены<br><br>
    <p><center><img src="img_html/img/img7/23.jpg" alt='Вена'><br>
       Бельведер — австрийский Версаль.<br><br>
-   <p><center><img src="img_html/img/img7/24.png" alt='Вена'><br>
+   <p><center><img src="img_html/img/img7/24.jpg" alt='Вена'><br>
       Новогодние аттракционы перед зданиями дворца Бельведер.<br><br>
-   <p><center><img src="img_html/img/img7/25.png" alt='Вена'>
-   <p><center><img src="img_html/img/img7/26.png" alt='Вена'><br>
+   <p><center><img src="img_html/img/img7/25.jpg" alt='Вена'>
+   <p><center><img src="img_html/img/img7/26.jpg" alt='Вена'><br>
       У одной из скульптур перед дворцом Бельведер.<br><br>
    <p><center><img src="img_html/img/img7/27.jpg" alt='Вена'><br>
       Карлскирхе — католическая церковь, расположенная на самом краю района Внутренний город , в Вене. ".<br><br>
-   <p><center><img src="img_html/img/img7/28.png" alt='Вена'><br>
+   <p><center><img src="img_html/img/img7/28.jpg" alt='Вена'><br>
       Вид со смотровой башни церкви Карлскирхе на праздничную площадь.<br><br>
-   <p><center><img src="img_html/img/img7/29.png" alt='Вена'>
-   <p><center><img src="img_html/img/img7/30.png" alt='Вена'><br>
+   <p><center><img src="img_html/img/img7/29.jpg" alt='Вена'>
+   <p><center><img src="img_html/img/img7/30.jpg" alt='Вена'><br>
       Алиса веселится.<br><br>
-   <p><center><img src="img_html/img/img7/31.png" alt='Вена'><br>
+   <p><center><img src="img_html/img/img7/31.jpg" alt='Вена'><br>
       Приехали родители Оксаны, а друзья утром уезжают.<br>Очередная совместная фотография.<br><br>
-   <p><center><img src="img_html/img/img7/32.png" alt='Вена'><br>
+   <p><center><img src="img_html/img/img7/32.jpg" alt='Вена'><br>
       Алиса на фоне дворца Шенбрунн.<br><br>
-   <p><center><img src="img_html/img/img7/33.png" alt='Вена'><br>
+   <p><center><img src="img_html/img/img7/33.jpg" alt='Вена'><br>
       Вена, 21 декабря. Приехали из Украины мы с Таней.<br>
 	  И снова гуляем по городу. Фото: внуки, дети и родители.<br><br>
-   <p><center><img src="img_html/img/img7/34.png" alt='Вена'><br>
+   <p><center><img src="img_html/img/img7/34.jpg" alt='Вена'><br>
       Вена, 22 декабря.Продолжаем гулять по городу<br>
 	  Фото на фоне авангардной достопримечательности Вены — Дома Хундертвассера.<br><br>
-   <p><center><img src="img_html/img/img7/35.png" alt='Вена'>
-   <p><center><img src="img_html/img/img7/36.png" alt='Вена'><br>
+   <p><center><img src="img_html/img/img7/35.jpg" alt='Вена'>
+   <p><center><img src="img_html/img/img7/36.jpg" alt='Вена'><br>
       Церковь иезуитов – одна из самых красивых в Вене.<br><br>
    <p><center><img src="img_html/img/img7/37.jpg" alt='Вена'><br>
       Внутри церкви иезуитов.<br><br>
-   <p><center><img src="img_html/img/img7/38.png" alt='Вена'><br>
+   <p><center><img src="img_html/img/img7/38.jpg" alt='Вена'><br>
       Лева тоже отметился на праздничных улицах Вены.<br><br>
-   <p><center><img src="img_html/img/img7/39.png" alt='Вена'><br>
+   <p><center><img src="img_html/img/img7/39.jpg" alt='Вена'><br>
       Последний вечер в Вене закончили на катке в центре города.<br><br>
    <p><center><video height="500" src="img_html/img/img7/40.mp4" controls alt='Вена-Прага'></video><br>
 	    23 декабря. Едем на поезде в Прагу.<br><br>	  
@@ -85,28 +85,28 @@
    <p><center><img src="img_html/img/img7/43.jpg" alt='Прага'><br>
       На Староместской площади. <br><br>
    <p><center><img src="img_html/img/img7/44.jpg" alt='Прага'>
-   <p><center><img src="img_html/img/img7/45.png" alt='Прага'><br>
+   <p><center><img src="img_html/img/img7/45.jpg" alt='Прага'><br>
       25 декабря. К нам присоединилась семья Нади, приехавшая накануне из Англии.<br>Совместное фото на фоне собора Святого Вита в Пражском Граде.<br><br>
    <p><center><img src="img_html/img/img7/46.jpg" alt='Прага'><br>
       На одной из улочек Пражского Града. <br><br>
-   <p><center><img src="img_html/img/img7/47.png" alt='Прага'><br>
+   <p><center><img src="img_html/img/img7/47.jpg" alt='Прага'><br>
       Вид на Прагу с одного из зданий Пражского Града. <br><br>	  
-   <p><center><img src="img_html/img/img7/48.png" alt='Прага'>
-   <p><center><img src="img_html/img/img7/49.png" alt='Прага'><br>
+   <p><center><img src="img_html/img/img7/48.jpg" alt='Прага'>
+   <p><center><img src="img_html/img/img7/49.jpg" alt='Прага'><br>
       Праздничный ужин в одном из уютных кафе Праги. <br><br>
-   <p><center><img src="img_html/img/img7/50.png" alt='Прага'><br>
+   <p><center><img src="img_html/img/img7/50.jpg" alt='Прага'><br>
       Вечерняя Прага. На Карловом мосту <br><br>
-   <p><center><img src="img_html/img/img7/51.png" alt='Прага'><br>
+   <p><center><img src="img_html/img/img7/51.jpg" alt='Прага'><br>
       Вид на Карлов мост с одной из башен моста. <br><br>
-   <p><center><img src="img_html/img/img7/52.png" alt='Прага'><br>
+   <p><center><img src="img_html/img/img7/52.jpg" alt='Прага'><br>
       На самой узкой улочке Праги. <br><br>
    <p><center><img src="img_html/img/img7/53.jpg" alt='Прага'><br>
       27 декабря. Экскурсия в замок Карлштейн в 40 км. от Праги. <br><br>
    <p><center><img src="img_html/img/img7/54.jpg" alt='Прага'>
    <p><center><img src="img_html/img/img7/55.jpg" alt='Прага'>
-   <p><center><img src="img_html/img/img7/56.png" alt='Прага'>
+   <p><center><img src="img_html/img/img7/56.jpg" alt='Прага'>
    <p><center><img src="img_html/img/img7/57.jpg" alt='Прага'>
-   <p><center><img src="img_html/img/img7/58.png" alt='Прага'>
+   <p><center><img src="img_html/img/img7/58.jpg" alt='Прага'>
    <p><center><img src="img_html/img/img7/59.jpg" alt='Прага'><br>
       На таком поезде мы ездили на экскурсию. <br><br>
    <p><center><video height="500" src="img_html/img/img7/60.mp4" controls alt='Вена-Прага'></video><br>
