--- a/img_html/foto_report7.html
+++ b/img_html/foto_report7.html
@@ -82,7 +82,7 @@
       24 декабря. Гуляем по Праге.<br><br>
    <p><center><img src="img_html/img/img7/42.jpg" alt='Прага'><br>
       Около Пражских курантов.<br>Они являются третьими по возрасту астрономическими часами в мире и старейшими, которые всё ещё работают. <br><br>
-   <p><center><img src="img_html/img/img7/43.jpg" alt='Прага'><br>
+   <p><center><img src="img_html/img/img7/43.JPG" alt='Прага'><br>
       На Староместской площади. <br><br>
    <p><center><img src="img_html/img/img7/44.jpg" alt='Прага'>
    <p><center><img src="img_html/img/img7/45.jpg" alt='Прага'><br>
