--- a/img_html/foto_report7.html
+++ b/img_html/foto_report7.html
@@ -100,7 +100,7 @@
       Вид на Карлов мост с одной из башен моста. <br><br>
    <p><center><img src="img_html/img/img7/52.jpg" alt='Прага'><br>
       На самой узкой улочке Праги. <br><br>
-   <p><center><img src="img_html/img/img7/53.jpg" alt='Прага'><br>
+   <p><center><img src="img_html/img/img7/53.JPG" alt='Прага'><br>
       27 декабря. Экскурсия в замок Карлштейн в 40 км. от Праги. <br><br>
    <p><center><img src="img_html/img/img7/54.jpg" alt='Прага'>
    <p><center><img src="img_html/img/img7/55.jpg" alt='Прага'>
