--- a/img_html/foto_report7.html
+++ b/img_html/foto_report7.html
@@ -105,7 +105,7 @@
    <p><center><img src="img_html/img/img7/54.jpg" alt='Прага'>
    <p><center><img src="img_html/img/img7/55.jpg" alt='Прага'>
    <p><center><img src="img_html/img/img7/56.jpg" alt='Прага'>
-   <p><center><img src="img_html/img/img7/57.jpg" alt='Прага'>
+   <p><center><img src="img_html/img/img7/57.JPG" alt='Прага'>
    <p><center><img src="img_html/img/img7/58.jpg" alt='Прага'>
    <p><center><img src="img_html/img/img7/59.jpg" alt='Прага'><br>
       На таком поезде мы ездили на экскурсию. <br><br>
