--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Персональный сайт - Главная страница, Виноград, Продажа саженцев и черенков, Купить саженцы винограда, Купить черенки винограда,Саженцы Винограда,Черенки винограда, Лучшие сорта винограда, Элитный виноград, Виноград для вина, Винные сорта винограда,Столовые сорта винограда, Устойчивые, Сильнорослые, Крупные, Сорта, Винограда</title>
+    <meta name="keywords" content="Виноград, Продажа саженцев и черенков, Купить саженцы винограда, Купить черенки винограда,Саженцы Винограда,Черенки винограда, Лучшие сорта винограда, Элитный виноград, Виноград для вина, Винные сорта винограда,Столовые сорта винограда, Устойчивые, Сильнорослые, Крупные, Сорта, Винограда, Путешествия, экскурсии, США, Европа, отдых,фоторепортажи,фото,семья,дети,внуки,Вашингтон,Нью-Йорк,Нью-Джерси,Филадельфия,Балтимор,Аннаполис,самолет,автомобиль,машина">
+    <meta name="description" content="Путешествия,экскурсии,Виноград, Продажа саженцев и черенков, Купить саженцы винограда, Купить черенки винограда>
+    <title>Персональный сайт - Главная страница, Виноград, Продажа саженцев и черенков, Купить саженцы винограда, Купить черенки винограда,Саженцы Винограда,Черенки винограда, Лучшие сорта винограда, Элитный виноград, Виноград для вина, Винные сорта винограда,Столовые сорта винограда, Устойчивые, Сильнорослые, Крупные, Сорта, Винограда, Путешествия, экскурсии, США, Европа, отдых,фоторепортажи,фото,семья,дети,внуки,Вашингтон,Нью-Йорк,Нью-Джерси,Филадельфия,Балтимор,Аннаполис,самолет,автомобиль,машина</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	
 	<base href="https://menshnik.github.io/web/">
