--- a/o_razn8.html
+++ b/o_razn8.html
@@ -144,6 +144,14 @@
                             </td>
                           </tr>
 						  
+						  <tr valign=top>
+						    <td>
+       			              <IMG SRC="img1/dot.gif" WIDTH="3" HEIGHT="3" vspace=4>
+							</td>
+							<td width="100%"><p><a href="o_razn10.html">США  (2021)</a></p>
+                            </td>
+                          </tr>
+						  
                           <tr valign=top>
 
                           </tr>
