--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="keywords" content="Виноград, Продажа саженцев и черенков, Купить саженцы винограда, Купить черенки винограда,Саженцы Винограда,Черенки винограда, Лучшие сорта винограда, Элитный виноград, Виноград для вина, Винные сорта винограда,Столовые сорта винограда, Устойчивые, Сильнорослые, Крупные, Сорта, Винограда, Путешествия, экскурсии, США, Европа, отдых,фоторепортажи,фото,семья,дети,внуки,Вашингтон,Нью-Йорк,Нью-Джерси,Филадельфия,Балтимор,Аннаполис,самолет,автомобиль,машина, forex,форекс,forex trading,online trading, online forex, стратегии, стратегии на рынке Форекс,стратегии на рынке Forex,торговые стратегии,online forex trading,forex news,forex broker,forex trade,валютный рынок,рынок forex, игра на бирже, валюта, forex форум, биржа forex, котировки forex, что такое forex, новости forex, литература forex, forex игра, forex биржевая игра, мини forex, графики forex, брокер, заработать, рынке,  помощью, наших, автоматических, торговых, систем, добро, пожаловать, специализируемся, решении, математических, физических, задач, возникающих, форекс-торговле, кроме, этого, пишем, программы, специфика, которых, математические">
+    <meta name="keywords" content="Меншутин Николай - Персональный сайт>
     <meta name="description" content="Путешествия,экскурсии,Виноград, Продажа саженцев и черенков, Купить саженцы винограда, Купить черенки винограда, forex,форекс,forex trading,online trading, online forex, стратегии, стратегии на рынке Форекс,стратегии на рынке Forex>
     <title>Меншутин Николай - Персональный сайт</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
