--- a/img_html/foto_report9.html
+++ b/img_html/foto_report9.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="ru">
+ <head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <base href="https://menshnik.github.io/web/">
+ </head>
+ <body><br>
+   <p><center><img src="img_html/img/img8/1.jpg" alt='Вашингтон'><br>
+      Июль 2021. Гуляем по Вашингтону. В саду возле Джоржтаунского университета.<br><br>
+   <p><center><img src="img_html/img/img8/2.jpg" alt='Вашингтон'>
+   <p><center><img src="img_html/img/img8/3.jpg" alt='Вашингтон'><br>
+      Около мемориала, посвященного погибшим американцам во 2-й мировой войне.<br><br>
+   <p><center><img src="img_html/img/img8/4.jpg" alt='Вашингтон'><br>
+      В одном из парков на реке Потомак.<br><br>
