Add closing body and html tags to foto_report9.html

--- a/img_html/foto_report9.html
+++ b/img_html/foto_report9.html
@@ -13,3 +13,5 @@
       Около мемориала, посвященного погибшим американцам во 2-й мировой войне.<br><br>
    <p><center><img src="img_html/img/img8/4.jpg" alt='Вашингтон'><br>
       В одном из парков на реке Потомак.<br><br>
+ </body>
+</html>
