Replace Washington images with Warsaw images

--- a/img_html/foto_report9.html
+++ b/img_html/foto_report9.html
@@ -6,12 +6,9 @@
   <base href="https://menshnik.github.io/web/">
  </head>
  <body><br>
-   <p><center><img src="img_html/img/img8/1.jpg" alt='Вашингтон'><br>
-      Июль 2021. Гуляем по Вашингтону. В саду возле Джоржтаунского университета.<br><br>
-   <p><center><img src="img_html/img/img8/2.jpg" alt='Вашингтон'>
-   <p><center><img src="img_html/img/img8/3.jpg" alt='Вашингтон'><br>
-      Около мемориала, посвященного погибшим американцам во 2-й мировой войне.<br><br>
-   <p><center><img src="img_html/img/img8/4.jpg" alt='Вашингтон'><br>
-      В одном из парков на реке Потомак.<br><br>
+   <p><center><img src="img_html/img/img9/1.jpg" alt='Варшава'>
+   <p><center><img src="img_html/img/img9/3.mp4" alt='Варшава'>
+   <p><center><img src="img_html/img/img9/13.mp4" alt='Варшава'>
+   <p><center><img src="img_html/img/img9/20.mp4" alt='Варшава'><br><br>
  </body>
 </html>
