--- a/img_html/foto_report9.html
+++ b/img_html/foto_report9.html
@@ -9,6 +9,6 @@
    <p><center><img src="img_html/img/img9/1.jpg" alt='Варшава'>
    <p><center><video height="500" src="img_html/img/img9/3.mp4" alt='Варшава'>
    <p><center><video height="500" src="img_html/img/img9/13.mp4" alt='Варшава'>
-   <p><center><video height="500" src="img_html/img/img9/20.mp4" alt='Варшава'><br><br>
+   <p><center><video height="500" src="img_html/img/img9/20.mp4" alt='Варшава'></video><br><br>
  </body>
 </html>
