Add controls to video elements in foto_report9.html
Added controls to video elements for better user interaction.

--- a/img_html/foto_report9.html
+++ b/img_html/foto_report9.html
@@ -7,8 +7,8 @@
  </head>
  <body><br>
    <p><center><img src="img_html/img/img9/1.jpg" alt='Варшава'>
-   <p><center><video height="500" src="img_html/img/img9/3.mp4" alt='Варшава'>
-   <p><center><video height="500" src="img_html/img/img9/13.mp4" alt='Варшава'>
-   <p><center><video height="500" src="img_html/img/img9/20.mp4" alt='Варшава'></video><br><br>
+   <p><center><video height="500" src="img_html/img/img9/3.mp4" controls alt='Варшава'></video><br>
+   <p><center><video height="500" src="img_html/img/img9/13.mp4" controls alt='Варшава'></video><br>
+   <p><center><video height="500" src="img_html/img/img9/20.mp4" controls alt='Варшава'></video><br><br>
  </body>
 </html>
